<resources>
    <string name="app_name">Bottom Bar</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="bookmark">Bookmark</string>
    <string name="friend">Friend</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">Image</string>
</resources>